refactor en la implementacion de los filtros de tickets